--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/grafogram_favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/grafogram_favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/grafogram_favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/grafogram_favicon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2c3e50" />
-    <meta name="description" content="Online Sketch Board - Draw shapes, lines, and text" />
-    <title>Online Sketch Board</title>
+    <meta name="description" content="Grafogram - Online Sketch Board for drawing diagrams, shapes, lines, and text" />
+    <title>Grafogram - Online Sketch Board</title>
     <style>
       body {
         margin: 0;
